# Copyright (c) 2022 Talkweb Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
assert(
    defined(LOSCFG_DRIVERS_HDF_PLATFORM_I2C),
    "Must Config LOSCFG_DRIVERS_HDF_PLATFORM_I2C in kernel/liteos_m menuconfig!")
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [ "hdf_i2c_test.c" ]

  include_dirs = [
    ".",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/adapter/khdf/liteos_m/osal/include",
    "//drivers/hdf_core/interfaces/inner_api/osal/shared",
    "//drivers/hdf_core/framework/include/osal",
  ]
}
